--- a/src/config.ini
+++ b/src/config.ini
@@ -3,7 +3,7 @@
 ; Possible methods are: cVAE, cWGAN-GP, NI
 ; If you also want to include no augmentation with combination of other methods, put an empty string e.g. space followed
 ; by a comma. , NI, cVAE, cWGAN-GP
-method_names = , NI, cVAE, cWGAN-GP
+method_names =
 
 ; A multiplier used to calculate the amount of new generated training samples used for classification. The resulting
 ; training dataset size will then be: real_training_size + (generated_data_multiplier * real_training_size).
